# marsz

./: .gitignore  README.md  build.zig  build.zig.zon  deno.json  shell.nix
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
deimos/: _config.ts  card.njk  deno.json  index.njk
deimos/_includes/: base.njk
phobos/: Cargo.toml
phobos/src/: lib.rs
src/: main.zig  static.zig  utils.zig
