[package]
name = "phobos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros"] }
diesel = { version = "2.1.0", features = ["postgres"] }
mongodb = "2.6.1"
futures = "0.3"
base64 = "0.21.4"
serde_json = "1.0.107"


[lib]
crate-type = ["staticlib", "cdylib"]
